# tfocpp

./: .env  .gitignore  ConnectorStateMachine.ods  Makefile  Ocpp.cpp  Ocpp.h  OcppChargePoint.cpp  OcppChargePoint.h  OcppChargingProfile.h  OcppConfiguration.cpp  OcppConfiguration.h  OcppConnection.cpp  OcppConnection.h  OcppConnector.cpp  OcppConnector.h  OcppDefines.h  OcppMessages.cpp  OcppMessages.h  OcppMeterValueAccumulator.cpp  OcppMeterValueAccumulator.h  OcppMeterValueHandler.cpp  OcppMeterValueHandler.h  OcppPersistency.cpp  OcppPersistency.h  OcppPlatform.cpp  OcppPlatform.cpp.disabled  OcppPlatform.h  OcppTools.cpp  OcppTools.h  OcppTypes.cpp  OcppTypes.h  README.rst  TestOcppPlatform.cpp  TestOcppPlatform.h  analyze.sh  library.json  linux_platform_packet.py  main.cpp  ocpp_platform_gui.py  ocpp_state.dot  (+1 more)
RaccoonWSClient/: WsRaccoonClient.cpp
generator/: Messages.cpp.template  Messages.h.template  generate_python_classes.py  generator.py
generator/schema/: Authorize.py  AuthorizeResponse.py  BootNotification.py  BootNotificationResponse.py  ClearCache.py  (+54 more)
libiso8601/: .gitignore  .travis.script  .travis.yml  README.md  add.c  internal.c  libiso8601.map  meson.build  misc.c  parse.c  t_add.c  t_internal.c
mongoose/: mongoose.h
ocpp/: ChargePoint.cpp  ChargePoint.h  Configuration.cpp  Connection.cpp  Connector.h  Messages.cpp  Messages.h  MeterValueAccumulator.h  MeterValueHandler.cpp  MeterValueHandler.h  Persistency.h  Platform.h  Tools.cpp  Types.cpp  Types.h
test/: default_central.py  default_platform.py  lsan_suppr.txt  main.py  runtest.sh  test__core_profile.py  test_authorize.py  test_boot_notification.py  test_change_availability.py  test_change_configuration.py  test_core_profile.py  test_get_configuration.py  test_heartbeat.py  test_remote_start_transaction.py  test_remote_stop_transaction.py  test_runner.py  test_start_transaction.py  test_status_notification.py  test_stop_transaction.py  test_unlock_connector.py
url_parse/: url.h
(+62 files in other folders)
